deploy/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posctl-api
  labels: { app.kubernetes.io/name: posctl-api, app.kubernetes.io/part-of: posctl }
spec:
  replicas: 2
  selector:
    matchLabels: { app.kubernetes.io/name: posctl-api }
  template:
    metadata:
      labels: { app.kubernetes.io/name: posctl-api }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: posctl-api
      securityContext:
        runAsNonRoot: true
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: api
          image: harbor.santimpay.local/posctl/api:latest # overwritten by overlay/CI
          ports: [{ containerPort: 8080, name: http }]
          resources:
            requests: { cpu: "250m", memory: "768Mi" }
            limits: { cpu: "1", memory: "1536Mi" }
          startupProbe:
            httpGet: { path: /actuator/health/readiness, port: http }
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: http }
            periodSeconds: 15
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: http }
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
          volumeMounts:
            - { name: tmp, mountPath: /tmp }
      volumes:
        - { name: tmp, emptyDir: {} }
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels: { app.kubernetes.io/name: posctl-api }
